# plec

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  KaleidoscopeJIT.h  LICENSE  Makefile  README.md  catmc.cpp  dune-project  lexer.l  musec.cpp  plec.opam
docs/: grammar.bnf
include/: AST.h  Lexer.h  Parser.h  Token.h  ast.h  error.h  lexer.h  parser.h  token.h
include/catm/Basic/: SourceLocation.h
include/catm/Lex/: Lexer.h  Token.h  TokenTypes.h
include/catm/Parse/: Parser.h
include/catm/Parser/: ASTNode.h  Parser.h
include/ple/: IRGenerator.h
include/ple/AST/: ASTForward.h  ASTNode.h  ControlFlow.h  Expr.h  Function.h  Literal.h  Operation.h
include/ple/Basic/: SourceLocation.h
include/ple/Lex/: Lexer.h  Token.h
include/ple/Parse/: Parser.h
lib/: Calc.g4  dune  main.cpp
lib/IR/: IRGenerator.cpp
lib/diagnostics/: debug.ml  dune  error.ml
lib/parse/: dune  lexer.ml  parser.mly
lib/types/: dune  eval.ml  semantics.ml  types.ml
lib/typing/: dune  eval.ml  semantics.ml  types.ml
src/: AST.cpp  Lexer.cpp  Parser.cpp  ast.cpp  lexer.c  lexer.cpp  lexer.rs  lib.rs  main.c  main.cpp  main.rs  parser.cpp  parser.rs
src/Driver/: Lib.cpp
src/Lex/: Lexer.cpp
src/Parse/: Parser.cpp
src/Parser/: Parser.cpp
src/basic/: mod.rs  type_def.rs
src/ir/: ir_gen.rs
src/lex/: lexer.rs
src/parse/: parser.rs
src/ple/: mod.rs
src/ple/ir/: ir_codegen.rs  ir_gen.rs  mod.rs
src/ple/parse/: parser.rs
src/repl/: repl.rs
src/sema/: analysis.rs
test/: dune
